<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ItemEditorActivity">

        <item
            android:id="@+id/menu_editor_save"
            android:title="@string/save"
            android:icon="@drawable/ic_done_white_24dp"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_delete"
            android:title="@string/delete"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_editor_sell"
            android:title="@string/sell"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_editor_received"
            android:title="@string/order_received"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_editor_order"
            android:title="@string/order"
            app:showAsAction="never"/>

</menu>