<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.myinventoryapp.ItemEditorActivity">

    <!-- Layout for the item editor -->
    <LinearLayout android:id="@+id/activity_item_editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorBackgroundItemEdit">

        <!-- Product information header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textAllCaps="true"
            android:textColor="@color/colorTextItemEdit"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/product_information"/>

        <!-- Product name layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="@dimen/editor_tag_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/name_edit_text"
                style="@style/styleMandatoryEditTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:inputType="textCapWords"
                android:hint="@string/hint_product_name"/>

        </LinearLayout>

        <!-- Product code layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="@dimen/editor_tag_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/product_code"/>

            <EditText
                android:id="@+id/code_edit_text"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:hint="@string/hint_product_code"/>

        </LinearLayout>

        <!-- Product photo layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="@dimen/editor_tag_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/product_photo"/>

            <RelativeLayout
                android:id="@+id/photo_relative_layout"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="4dp">

                <ImageView
                    android:id="@+id/product_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@drawable/ic_photo_black_48dp"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/product_no_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorBackgroundPhoto"
                    android:tint="@color/colorTintPhoto"
                    android:src="@drawable/ic_photo_black_48dp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/no_image_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:textSize="22sp"
                    android:textColor="@color/colorBackgroundPhoto"
                    android:text="@string/product_add_photo"
                    android:visibility="visible"/>

            </RelativeLayout>

        </LinearLayout>

        <!-- Product quantity layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="@dimen/editor_tag_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/quantity_in_stock"/>

            <EditText
                android:id="@+id/quantity_edit_text"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:inputType="number"
                android:hint="@string/hint_quantity_in_stock"/>

        </LinearLayout>

        <!-- Product price layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="@dimen/editor_tag_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/product_price"/>

            <EditText
                android:id="@+id/price_edit_text"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_sales_price"/>

        </LinearLayout>

        <!-- Supplier information header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAllCaps="true"
            android:textColor="@color/colorTextItemEdit"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/supplier_information"/>

        <!-- Supplier name layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/supplier_edit_text"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:hint="@string/hint_supplier_name"/>

        </LinearLayout>

        <!-- Supplier address layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/address"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">

                <EditText
                    android:id="@+id/addy1_edit_text"
                    style="@style/styleAdditionalEditTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:inputType="textPostalAddress"
                    android:hint="@string/hint_address_1"/>

                <EditText
                    android:id="@+id/addy2_edit_text"
                    style="@style/styleAdditionalEditTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/hint_address_2"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Supplier city, state layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/city_state"/>

            <EditText
                android:id="@+id/city_edit_text"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:inputType="textCapWords"
                android:hint="@string/hint_city"/>

            <!-- State Spinner -->
            <Spinner
                android:id="@+id/spinner_state"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="36dp"
                android:padding="4dp"
                android:layout_marginLeft="4dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <!-- Supplier zip-code layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/zip_code"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp">

            <EditText
                android:id="@+id/zip_edit_text"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_zip_code"
                android:inputType="number"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Supplier phone layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/phone"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp">

                <EditText
                    android:id="@+id/phone_edit_text"
                    style="@style/styleAdditionalEditTextBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Supplier e-mail layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/e_mail"/>

            <EditText
                android:id="@+id/email_edit_text"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:hint="@string/hint_e_mail"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <!-- Supplier website layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextItemEdit"
                android:textSize="16sp"
                android:text="@string/website"/>

            <EditText
                android:id="@+id/website_edit_text"
                style="@style/styleAdditionalEditTextBox"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:hint="@string/hint_website"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>