<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/list_item_edit_layout"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextMain"
                    tools:text="Milk"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextMain"
                    android:textAllCaps="true"
                    android:text="@string/header_price"/>

                <TextView
                    android:id="@+id/item_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/colorTextMain"
                    tools:text="$3.50"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextMain"
                    android:textAllCaps="true"
                    android:text="@string/header_quantity"/>

                <TextView
                    android:id="@+id/item_qty_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    tools:text="20"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp">

            <TextView
                android:id="@+id/item_sell_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorTextItemEdit"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/sell"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>